# document-management-system

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  .streamlit_deploy  CLASSIFICATION_MIGRATION_SUMMARY.md  CLASSIFICATION_SYSTEM_REDESIGN.md  CLAUDE.md  CLAUDE_CHANGES_LOG.md  CLAUDE_MISTAKES_LOG.md  CLOUD_RUN_DEPLOY.md  CODE_REFACTOR_COMPLETE.md  DATABASE_CLEANUP_GUIDE.md  DEPLOYMENT_FIX_GUIDE.md  DESIGN_REPROCESS_COMPLETE.md  DESIGN_UNIFIED_PIPELINE.md  Dockerfile  Dockerfile.processor  HANDOVER.md  HYBRID_OCR_README.md  IMPLEMENTATION_STEPS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PIPELINE_20260128_052420.md  PIPELINE_20260128_095833.md  PIPELINE_20260128_102428.md  PIPELINE_20260128_113541.md  PIPELINE_20260128_115449.md  PIPELINE_20260128_132250.md  PIPELINE_20260128_134122.md  PIPELINE_20260129_105603.md  PIPELINE_20260129_153225.md  PIPELINE_20260129_163933.md  PIPELINE_20260130_083708.md  PIPELINE_20260130_135313.md  PIPELINE_20260130_135533.md  PIPELINE_20260130_142750.md  PIPELINE_20260130_152601.md  PIPELINE_20260130_171547.md  (+152 more)
.claude/: plan.md
.claude/worktrees/agent-a8982513/: .dockerignore  .gcloudignore  CLAUDE.md  README.md  cloudbuild.yaml  pyproject.toml
.claude/worktrees/agent-a8982513/.github/workflows/: import-receipts.yml
.claude/worktrees/agent-a8982513/.streamlit/: convert_env_to_toml.py
.claude/worktrees/agent-a8982513/my-calendar-app/: cloudbuild.yaml  next-auth.d.ts  package-lock.json  package.json  supabase_tasks_rename_migration.sql
.claude/worktrees/agent-a8982513/supabase/: seed.sql
.tmp-di2/: pyvenv.cfg
(+9909 files in other folders)
