[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-management-system"
version = "1.0.0"
description = "Document Management System"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "scripts*", "services*", "frontend*", "database*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]
